--- a/product.html
+++ b/product.html
@@ -66,8 +66,7 @@
       <div class="footer-social">
         <h3>Connect With Us</h3>
         <div class="social-icons">
-          <a href="https://www.facebook.com/yourcompany" target="_blank"><i class="fab fa-facebook-f"></i></a>
-          <a href="https://www.instagram.com/yourcompany" target="_blank"><i class="fab fa-instagram"></i></a>
+          <a href="https://www.facebook.com/profile.php?id=61576729991448" target="_blank"><i class="fab fa-facebook-f"></i></a>
           <a href="https://wa.me/60102626336?text=Hi%2C%20I%20am%20interested%20in%20your%20products." target="_blank"><i class="fab fa-whatsapp"></i></a>
           </div>
           <p>Contact Number: +60102626336</p>
