--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       </div>
       <div class="nav-links">
         <a href="index.html" class="active">Home</a>
-        <a href="about.html">About US</a>
+        <a href="about.html">About Us</a>
         <a href="product.html">Products</a>
         <a href="services.html">Additional Services</a>
       </div>
@@ -76,7 +76,6 @@
           <h3>Connect With Us</h3>
           <div class="social-icons">
             <a href="https://www.facebook.com/profile.php?id=61576729991448" target="_blank"><i class="fab fa-facebook-f"></i></a>
-            <a href="https://www.instagram.com/yourcompany" target="_blank"><i class="fab fa-instagram"></i></a>
             <a href="https://wa.me/60102626336?text=Hi%2C%20I%20am%20interested%20in%20your%20products." target="_blank"><i class="fab fa-whatsapp"></i></a>
           </div>
           <p>Contact Number: +60102626336</p>
