--- a/product.html
+++ b/product.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cergas Yakin Enterprise-Product</title>
-     <link rel="icon" href="images/favicon-32x32.ico" type="image/x-icon" />
+    <link rel="icon" href="images/favicon-32x32.ico" type="image/x-icon"/>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/product.css">
     <!-- Font Awesome for icons -->
@@ -22,7 +22,7 @@
             </div>
             <div class="nav-links">
                 <a href="index.html" >Home</a>
-                <a href="about.html">About US</a>
+                <a href="about.html">About Us</a>
                 <a href="product.html"class="active">Products</a>
                 <a href="services.html"> Additional Services</a>
             </div>
