--- a/services.html
+++ b/services.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Cergas Yakin Enterprise - Additional Services</title>
-   <link rel="icon" href="images/favicon-32x32.ico" type="image/x-icon" />
+  <link rel="icon" href="images/favicon-32x32.ico" type="image/x-icon" />
   <link rel="stylesheet" href="css/style.css"/>
   <link rel="stylesheet" href="css/service.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"/>
@@ -20,7 +20,7 @@
     </div>
     <div class="nav-links">
       <a href="index.html">Home</a>
-      <a href="about.html">About US </a>
+      <a href="about.html">About Us</a>
       <a href="product.html">Products</a>
       <a href="services.html" class="active">Additional Services</a>
     </div>
