--- a/index.html
+++ b/index.html
@@ -89,7 +89,8 @@
   </footer>
 
   <!-- Scripts -->
-  <script src="js/product.js"></script>
-  <script src="js/renderproduct.js"></script>
+  <script src="js/product.js" defer></script>
+  <script src="js/renderproduct.js" defer></script>
+
 </body>
 </html>
