--- a/product.html
+++ b/product.html
@@ -81,8 +81,9 @@
   </div>
 </footer>
 
+<!-- Script-->
+<script src="js/product.js" defer></script>
+<script src="js/renderproduct.js" defer></script>
 
-  <script src="js/product.js"></script>
-  <script src="js/renderproduct.js"></script>
 </body>
 </html>
