--- a/product.html
+++ b/product.html
@@ -36,7 +36,7 @@
 
 
   <div class="product-availability-note">
-    <p>All products are available in 10KG, 5KG, 3KG, 1 Litre, and 500ML packaging.</p>
+    <p>All products are available in 25KG, 20KG, 10KG, 5KG, 3KG, 1 Litre, and 500ML packaging.</p>
   </div>
 </section>
 
